--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,7 +3,7 @@ owner: ymstnt # Your GitHub organization or username, where this repository live
 repo: status # The name of this repository
 
 sites:
-  - name: Website
+  - name: ymstnt & com. website
     url: https://ymstnt.com
   - name: Moe
     url: http://ymstnt.com:25571
