--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -15,16 +15,16 @@ status-website:
   # baseUrl: /your-repo-name
   logoUrl: https://raw.githubusercontent.com/ymstnt/status/master/assets/tnt512circle.png
   favicon: https://raw.githubusercontent.com/ymstnt/status/master/assets/favicon.png
-  name: ymstnt services
+  name: ymstnt & com. services
   themeUrl: https://status.ymstnt.com/catppuccin.css
   robotsText: "User-agent: * \n Disallow: /"
   navbar:
     - title: Status
       href: /
-    - title: Home
-      href: https://ymstnt.dev
-    - title: ymstnt & com.
+    - title: Website
       href: https://ymstnt.com
+    - title: ymstnt
+      href: https://ymstnt.dev
     - title: GitHub
       href: https://github.com/$OWNER/$REPO
 
