--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,5 +1,5 @@
 # Change these first
-owner: ymstnt # Your GitHub organization or username, where this repository lives
+owner: ymstnt-com # Your GitHub organization or username, where this repository lives
 repo: status # The name of this repository
 
 sites:
