--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,6 +1,6 @@
 # Change these first
 owner: ymstnt-com # Your GitHub organization or username, where this repository lives
-repo: status # The name of this repository
+repo: status-old # The name of this repository
 
 sites:
   - name: ymstnt & com. website
